# quad_src

./: README.md  rpi_cmds.txt
bumperbot_controller/: CMakeLists.txt  bumperbot_controller.xml  package.xml
bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py  waypoint_navigation.py
bumperbot_controller/config/: bumperbot_controllers.yaml  ekf.yaml
bumperbot_controller/include/: simple_controller.hpp
bumperbot_controller/include/bumperbot_controller/: bumperbot_interface.hpp
bumperbot_controller/launch/: controller.launch.py
bumperbot_controller/src/: bumperbot_interface.cpp  simple_controller.cpp
bumperbot_firmware/: CMakeLists.txt  package.xml
bumperbot_firmware/bumperbot_firmware/: simple_serial_transmitter.py
bumperbot_firmware/firmware/four_legs/: four_legs.ino
bumperbot_firmware/firmware/one_leg/: one_leg.ino
bumperbot_firmware/firmware/simple_serial_receiver/: simple_serial_receiver.ino
bumperbot_firmware/firmware/simple_serial_transmitter/: simple_serial_transmitter.ino
bumperbot_firmware/firmware/simple_servo_control/: simple_servo_control.ino
bumperbot_firmware/firmware/two_legs/: two_legs.ino
bumperbot_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp
custom_service/: CMakeLists.txt
custom_service/srv/: IkSw.srv
ik/src/: ik_sol.cpp
quadruped_description/: CMakeLists.txt  quad-commands
quadruped_description/config/: joystick.yaml  lidar.rviz  marker_dog.rviz  my_controllers.yaml
quadruped_description/launch/: display.launch.py  gazebo.launch.py  hardware.launch.py  joystick.launch.py
quadruped_description/meshes/: base_link.stl  lb1_1.stl  lb2_1.stl  lb3_1.stl  lf1_1.stl  lf2_1.stl  lf3_1.stl  rb1_1.stl  rb2_1.stl  rb3_1.stl  rf1_1.stl  rf2_1.stl  rf3_1.stl
quadruped_description/scripts/: static_tf.py  test.py  traj_bezier.cpp  traj_saver.cpp
quadruped_description/urdf/: bot_urdf_hii.gazebo  bot_urdf_hii.trans  bot_urdf_hii.xacro  bot_urdf_hii_1.xacro  lidar.xacro  ros2_control.xacro
quadruped_description/worlds/: eyrc.world
sllidar_ros2/launch/: view_sllidar_a1_launch.py
